--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 :root {
@@ -12,11 +12,30 @@
     --accent-two: #fafd61;
 }
 
+.menubutton {
+    /* NOTE ENABLE FLEX if less than 970 px */
+    display: none;
+    flex-direction: column;
+    position: relative;
+    align-items: end;
+    top: 2rem;
+    right: 3rem;
+}
+
+.menubuttonbar {
+    background-color: white;
+    height: 4px;
+    width: 30px;
+    margin: 2px 0rem;
+    border-radius: 10px;
+}
+
 .nav {
     color: var(--s-color);
 }
 
 .navlinks ul {
+    /* NOTE DISABLE FLEX if less than 970 px */
     display: flex;
     justify-content: end;
 }
@@ -137,5 +156,13 @@ body {
 
     .footer-nav-links ul {
         flex-direction: column;
+    }
+
+    .navlinks ul {
+        display: none;
+    }
+
+    .menubutton {
+        display: flex;
     }
 }
